# Taleji_Rust_Leptos

./: .env.example  .gitignore  .replit  Cargo.toml  Leptos.toml  README.md  features.md  replit.md
attached_assets/: Pasted-Love-it-Then-I-d-plant-our-flag-on-Leptos-full-stack-SSR-and-treat-this-as-a-Next-js-in-Rust-b-1762276700575_1762276700587.txt
migrations/: 20251104120000_create_posts.sql  20251106120000_add_authentication_and_features.sql
src/: app.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  security.rs
src/pages/: auth.rs  home.rs  mod.rs  post.rs  search.rs
style/: main.css
