[package]
name = "leptos-blog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
leptos_axum = { version = "0.6", optional = true }

axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"], optional = true }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

pulldown-cmark = "0.11"
anyhow = "1"
dotenvy = { version = "0.15", optional = true }

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Security & Authentication
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "request-id", "trace"], optional = true }
headers = { version = "0.4", optional = true }
validator = { version = "0.18", features = ["derive"], optional = true }
regex = { version = "1.0", optional = true }
lazy_static = { version = "1.4", optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "9.0", optional = true }
tower-sessions = { version = "0.12", optional = true }

# Enhanced Features
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
time = { version = "0.3", features = ["serde", "parsing"], optional = true }

console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:dotenvy",
    "dep:headers",
    "dep:validator",
    "dep:regex",
    "dep:lazy_static",
    "dep:bcrypt",
    "dep:jsonwebtoken",
    "dep:tower-sessions",
    "dep:rand",
    "dep:base64",
    "dep:time",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "leptos-blog"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "0.0.0.0:5000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
